--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
@@ -50,13 +51,12 @@
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.2",
     "highlight.js": "^11.8.0",
-    "i18next": "^23.6.0",
-    "i18next-browser-languagedetector": "^7.1.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "modern-normalize": "^2.0.0",
     "mui-one-time-password-input": "^2.0.0",
-    "next": "^13.4.19",
+    "negotiator": "^0.6.3",
+    "next": "^14.0.1",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
@@ -65,7 +65,6 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
-    "react-i18next": "^13.3.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
@@ -94,6 +93,7 @@
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/lodash": "^4.14.197",
     "@types/mapbox-gl": "^2.7.13",
+    "@types/negotiator": "^0.6.2",
     "@types/node": "^20.5.7",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.2",
