--- a/package.json
+++ b/package.json
@@ -49,14 +49,16 @@
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "firebase": "^10.3.0",
-    "framer-motion": "^10.16.2",
+    "framer-motion": "^10.16.4",
     "highlight.js": "^11.8.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "modern-normalize": "^2.0.0",
     "mui-one-time-password-input": "^2.0.0",
     "negotiator": "^0.6.3",
-    "next": "^14.0.1",
+    "next": "^14.0.2",
+    "next-intl": "^2.22.1",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
@@ -65,6 +67,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.4.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
