--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mui-one-time-password-input": "^2.0.0",
     "negotiator": "^0.6.3",
     "next": "^14.0.1",
+    "next-intl": "^2.22.1",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
