--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
     "@mui/base": "^5.0.0-beta.13",
+    "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/system": "^5.14.7",
@@ -72,6 +73,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
