--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
     "@mui/base": "^5.0.0-beta.13",
+    "@mui/icons-material": "^5.14.18",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/system": "^5.14.7",
