--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.4",
     "highlight.js": "^11.8.0",
+    "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
@@ -67,7 +68,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
-    "react-i18next": "^13.4.0",
+    "react-i18next": "^13.5.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
@@ -75,6 +76,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
