--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
     "@mui/base": "^5.0.0-beta.13",
-    "@mui/icons-material": "^5.14.16",
+    "@mui/icons-material": "^5.14.18",
     "@mui/lab": "^5.0.0-alpha.142",
-    "@mui/material": "^5.14.7",
+    "@mui/material": "^5.14.18",
     "@mui/system": "^5.14.7",
     "@mui/x-data-grid": "^6.12.0",
     "@mui/x-date-pickers": "^6.12.0",
@@ -52,12 +52,17 @@
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.2",
     "highlight.js": "^11.8.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "modern-normalize": "^2.0.0",
     "mui-one-time-password-input": "^2.0.0",
     "negotiator": "^0.6.3",
-    "next": "^14.0.1",
+    "next": "^14.0.3",
+    "next-i18next": "^15.0.0",
+    "next-intl": "^3.1.0",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
@@ -66,6 +71,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.5.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
