--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
     "no-restricted-exports": 0,
+    "no-useless-catch": 0,
     "react/no-children-prop": 0,
     "react/react-in-jsx-scope": 0,
     "jsx-a11y/anchor-is-valid": 0,
