--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
@@ -126,6 +127,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-typesafe": "^0.5.2",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
