--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "browser": true,
     "es2021": true
   },
-  "plugins": ["unused-imports", "@typescript-eslint", "prettier", "typesafe"],
+  "plugins": ["unused-imports", "@typescript-eslint", "prettier", "typesafe", "typesafe"],
   "extends": ["airbnb", "airbnb-typescript", "airbnb/hooks", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -92,18 +92,17 @@
       }
     ],
     "padding-line-between-statements": [
-      "error",
-      { "blankLine": "always", "prev": "", "next": "return" },
-      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "" },
+      "warn",
+      { "blankLine": "always", "prev": "*", "next": "return" },
+      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
       {
         "blankLine": "any",
         "prev": ["const", "let", "var"],
         "next": ["const", "let", "var"]
       },
-      { "blankLine": "always", "prev": "directive", "next": "" },
+      { "blankLine": "always", "prev": "directive", "next": "*" },
       { "blankLine": "any", "prev": "directive", "next": "directive" },
-      { "blankLine": "always", "prev": ["case", "default"], "next": "" }
+      { "blankLine": "always", "prev": ["case", "default"], "next": "*" }
     ]
   }
 }
-
