--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@babel/core": "^7.22.11",
     "@babel/plugin-syntax-flow": "^7.22.5",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@next/eslint-plugin-next": "^14.0.3",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
