--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_BASE_URL='https://example.com/api/v1/'
+NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_QOBRIX_PROXY_URL=
+NEXT_PUBLIC_QOBRIX_API_KEY=
+NEXT_PUBLIC_QOBRIX_API_USER=
