feat(profile, edit-profile): add db connection, some enhancements

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "no-unused-vars": 0,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
+    "no-unneeded-ternary": 0,
     "no-restricted-exports": 0,
     "no-useless-catch": 0,
     "react/no-children-prop": 0,
