--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,13 @@
       }
     ]
   },
-  "include": ["src", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "src",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/[locale]/property/[id]/[...leads]"
+  ],
   "exclude": ["node_modules"]
 }
