--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mapbox-gl": "^2.15.0",
     "modern-normalize": "^2.0.0",
     "mui-one-time-password-input": "^2.0.0",
+    "mui-tel-input": "^5.0.0",
     "negotiator": "^0.6.3",
     "next": "^14.0.3",
     "next-i18next": "^15.0.0",
