--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
