--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "encoding": "^0.1.13",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.4",
