--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "disable-scroll": "^0.6.0",
     "encoding": "^0.1.13",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.4",
     "highlight.js": "^11.8.0",
-    "i18next": "^23.7.6",
+    "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.1",
     "lodash": "^4.17.21",
@@ -74,6 +75,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.5.0",
+    "react-joyride": "^2.7.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
@@ -82,6 +84,7 @@
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.3",
     "redux-persist": "^6.0.0",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
