--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "next": "^14.0.3",
     "next-i18next": "^15.0.0",
     "next-intl": "^3.1.0",
+    "next-pwa": "^5.6.0",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
