--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,32 @@
 {
-  "name": "Minimal UI",
-  "short_name": "Minimal UI",
+  "name": "ZenBitRock",
+  "short_name": "ZenBitRock",
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
-
+  "background_color": "#ffffff",
+  "scope": "/",
+  "description": "Real Estate Network",
+  "icons": [
+      {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/icon-256x256.png",
+          "sizes": "256x256",
+          "type": "image/png"
+      },
+      {
+          "src": "/icon-384x384.png",
+          "sizes": "384x384",
+          "type": "image/png"
+      },
+      {
+          "src": "/icon-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
+  ]
 }
